hphp/hack/test/typecheck/argument_unpacking/unpack_call3.php.exp
File "unpack_call3.php", line 7, characters 8-12:
Invalid argument (Typing[4110])
File "unpack_call3.php", line 7, characters 8-12:
Expected Traversable<int> (it is unpacked with '...')
File "unpack_call3.php", line 6, characters 11-18:
But got string
File "unpack_call3.php", line 7, characters 8-12:
Invalid argument (Typing[4110])
File "unpack_call3.php", line 7, characters 8-12:
Expected Traversable<_> (it is unpacked with '...')
File "unpack_call3.php", line 6, characters 11-18:
But got string
File "unpack_call3.php", line 7, characters 3-13:
Too few arguments (required 1 but got 0) (Typing[4104])
File "unpack_call3.php", line 3, characters 10-10:
Definition is here
