hphp/hack/test/typecheck/argument_unpacking/unpack_call3.php
<?hh

function f(int $foo, mixed ...$args): void {}

function test(): void {
  $args = 'string';
  f(...$args); // should be error
}
